k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecart-service
  namespace: default
spec:
  selector:
    app: ecart
  ports:
    - port: 80
      targetPort: 9090
  type: LoadBalancer
